--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="./src/utils/utils.js"></script>
+    <script src="./src/utils/api.js"></script>
+    <script src="./src/utils/renderer.js"></script>
+    <script src="./src/fsm/states.js"></script>
+    <script src="./src/fsm/transitions.js"></script>
+    <script src="./src/fsm/machine.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
